<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventFragment">

    <TextView
        android:id="@+id/ee_page_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#AD3D8C"
        android:text="@string/edit_event_header"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:textSize="30sp"
        android:gravity="center"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/ee_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ee_page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:fontFamily="serif"
        android:text="@string/edit_event_title"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:labelFor="@id/edit_event_title"
        />
    <EditText
        android:id="@+id/edit_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ee_event_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        />

    <TextView
        android:id="@+id/ee_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_event_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:fontFamily="serif"
        android:text="@string/edit_event_date"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:labelFor="@id/edit_event_date"
        />
    <DatePicker
        android:id="@+id/edit_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/ee_event_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/ee_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_event_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:fontFamily="serif"
        android:text="@string/edit_event_location"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:labelFor="@id/edit_event_location"
        />
    <EditText
        android:id="@+id/edit_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ee_event_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"/>

    <TextView
        android:id="@+id/ee_event_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_event_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:fontFamily="serif"
        android:text="@string/edit_event_category"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:labelFor="@id/edit_event_category"
        />
    <EditText
        android:id="@+id/edit_event_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ee_event_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"/>

    <Button
        android:id="@+id/save_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save_event"
        android:layout_margin="20dp"
        android:backgroundTint="#80117E"/>

</androidx.constraintlayout.widget.ConstraintLayout>